--- a/templates/charges.html
+++ b/templates/charges.html
@@ -46,8 +46,7 @@
                     <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
                     <h1>Gestion des Charges</h1>
                     <div class="user-info">
-                        <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar"
-                            style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px; vertical-align: middle;">
+                        <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar">
                         <span id="usernameDisplay">Utilisateur</span>
                     </div>
                 </div>
