--- a/templates/parametres.html
+++ b/templates/parametres.html
@@ -209,19 +209,19 @@
       </div>
       <nav>
         <ul>
-            <li><a href="../index.html"><i class="fas fa-home"></i> <span>Accueil</span></a></li>
-            <li><a href="revenus.html"><i class="fas fa-money-bill-wave"></i> <span>Revenus ACI</span></a></li>
-            <li><a href="associes.html"><i class="fas fa-user-md"></i> <span>Associés</span></a></li>
-            <li><a href="charges.html"><i class="fas fa-file-invoice-dollar"></i> <span>Charges</span></a></li>
-            <li><a href="rcpmeeting.html"><i class="fas fa-users"></i> <span>Réunions RCP</span></a></li>
-            <li><a href="projets.html"><i class="fas fa-tasks"></i> <span>Projets & Missions</span></a></li>
-            <li class="active"><a href="repartition.html"><i class="fas fa-chart-pie"></i>
-                    <span>Répartition</span></a></li>
-            <li><a href="parametres.html"><i class="fas fa-cog"></i> <span>Paramètres</span></a></li>
-            <li><a href="../login.html" id="logoutButton"><i class="fas fa-sign-out-alt"></i>
-                    <span>Déconnexion</span></a></li>
+          <li><a href="../index.html"><i class="fas fa-home"></i> <span>Accueil</span></a></li>
+          <li><a href="revenus.html"><i class="fas fa-money-bill-wave"></i> <span>Revenus ACI</span></a></li>
+          <li><a href="associes.html"><i class="fas fa-user-md"></i> <span>Associés</span></a></li>
+          <li><a href="charges.html"><i class="fas fa-file-invoice-dollar"></i> <span>Charges</span></a></li>
+          <li><a href="rcpmeeting.html"><i class="fas fa-users"></i> <span>Réunions RCP</span></a></li>
+          <li><a href="projets.html"><i class="fas fa-tasks"></i> <span>Projets & Missions</span></a></li>
+          <li class="active"><a href="repartition.html"><i class="fas fa-chart-pie"></i>
+              <span>Répartition</span></a></li>
+          <li><a href="parametres.html"><i class="fas fa-cog"></i> <span>Paramètres</span></a></li>
+          <li><a href="../login.html" id="logoutButton"><i class="fas fa-sign-out-alt"></i>
+              <span>Déconnexion</span></a></li>
         </ul>
-    </nav>
+      </nav>
     </div>
     <div class="main-content">
       <header>
@@ -230,13 +230,7 @@
           <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
           <h1>Paramètres</h1>
           <div class="user-info">
-            <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar" style="
-                  width: 30px;
-                  height: 30px;
-                  border-radius: 50%;
-                  margin-right: 10px;
-                  vertical-align: middle;
-                " />
+            <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar">
             <span id="usernameDisplay">Utilisateur</span>
           </div>
         </div>
